# uniswap

./: README.md  todo
.github/workflows/: v2-cd.yaml  v2-ci.yaml  v3-cd.yaml  v3-ci.yaml
demos/python/: .gitignore  README.md  main.py  pyproject.toml
demos/rust/: .gitignore  Cargo.toml
demos/rust/src/: main.rs  types.rs
demos/rust/src/embeds/: mod.rs
demos/rust/src/embeds/ethers_core/: mod.rs
demos/rust/src/embeds/ethers_utils/: mod.rs
demos/rust/src/embeds/graph_node/: mod.rs  wrap.info
demos/rust/src/embeds/sha3/: mod.rs  wrap.wasm
demos/rust/src/embeds/uniswap_v3/: mod.rs
demos/v3-walkthrough/: package.json  todo
demos/v3-walkthrough/public/: index.html  manifest.json
demos/v3-walkthrough/scripts/: patch-peer-deps.ts
demos/v3-walkthrough/src/: App.tsx  Slides.tsx  index.tsx
v2/: URI.txt  deployment.json  docker-compose.yaml  jest.config.js  package.json  polywrap.deploy.yaml  polywrap.graphql  polywrap.yaml
v2/src/: index.ts  schema.graphql
v2/src/__tests__/: infraUtils.ts  testUtils.ts
v2/src/entities/: fetch.ts  pair.ts  router.ts  swap.ts  trade.ts
v2/src/utils/: TradeOptions.ts
v3/: Dockerfile  URI.txt  deployment.json  package.json  polywrap.build.yaml  polywrap.infra.yaml
v3/infra/: docker-compose.yaml
v3/sdks/js/: .gitignore  jest.config.js  package.json  polywrap.yaml  schema.graphql  tsconfig.json
v3/src/: index.ts  schema.graphql
v3/wrap/: README.md  URI.txt  client-config.ts  deployment.json  package.json  polywrap.build.yaml  polywrap.deploy.yaml  polywrap.docs.yaml  polywrap.graphql  polywrap.yaml
(+164 files in other folders)
