[package]
name = "uniswap-rust-app-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
polywrap_client = { version = "0.1.6-beta.2" }
polywrap_core = { version = "0.1.6-beta.2" }
polywrap_wasm = { version = "0.1.6-beta.2" }

polywrap_ethereum_wallet_plugin = { path = "../../../ethereum-wallet/implementations/rs" }
http_plugin_rs = { version = "0.0.1-beta.4" }
serde = { version = "1.0"}
dotenv = "0.15.0"
base64 = "0.13.1"
